MV3: fix cosmetic filter injection

--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -67,7 +67,8 @@
       "run_at": "document_start",
       "js": [
         "content_scripts/adblocker.js"
-      ]
+      ],
+      "all_frames": true
     },
     {
       "matches": ["http://*/*", "https://*/*"],
