--- a/extension-manifest-v3/src/manifest.safari.json
+++ b/extension-manifest-v3/src/manifest.safari.json
@@ -73,6 +73,14 @@
       "run_at": "document_start",
       "js": [
         "content_scripts/adblocker.js"
+      ],
+      "all_frames": true
+    },
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "run_at": "document_start",
+      "js": [
+        "content_scripts/adblocker-scriptlets.js"
       ]
     },
     {
