--- a/extension-manifest-v3/src/manifest.firefox.json
+++ b/extension-manifest-v3/src/manifest.firefox.json
@@ -49,7 +49,8 @@
       "run_at": "document_start",
       "js": [
         "content_scripts/adblocker.js"
-      ]
+      ],
+      "all_frames": true
     },
     {
       "matches": ["http://*/*", "https://*/*"],
