--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,6 +11,8 @@
     "./panel": "./src/modules/panel/index.js",
     "./settings": "./src/modules/settings/index.js",
     "./trackers-preview": "./src/modules/trackers-preview/index.js",
+    "./youtube": "./src/modules/youtube/index.js",
+    "./youtube/wall": "./src/modules/youtube/wall.js",
     "./categories": "./src/utils/categories.js",
     "./labels": "./src/utils/labels.js",
     "./wheel": "./src/utils/wheel.js",
