--- a/extension-manifest-v3/src/manifest.firefox.json
+++ b/extension-manifest-v3/src/manifest.firefox.json
@@ -73,7 +73,12 @@
       "js": [
         "content_scripts/whotracksme/reporting.js"
       ]
-    }
+    },
+    {
+      "matches": ["*://www.youtube.com/*"],
+      "run_at": "document_start",
+			"js": ["content_scripts/youtube.js"]
+		}
   ],
   "web_accessible_resources": [
     "content_scripts/trackers-preview.js",
@@ -81,7 +86,8 @@
     "pages/trackers-preview/index.html",
     "pages/autoconsent/index.html",
     "pages/onboarding/index.html",
-    "pages/onboarding/iframe.html"
+    "pages/onboarding/iframe.html",
+    "pages/youtube/index.html"
   ],
   "browser_specific_settings": {
 		"gecko": {
