--- a/extension-manifest-v2/CODEOWNERS
+++ b/extension-manifest-v2/CODEOWNERS
@@ -1,4 +1,4 @@
-# Ghostery CODEOWNERS
+extension-manifest-v2 Ghostery CODEOWNERS
 # Each line is a file pattern followed by one or more owners,
 # the last matching pattern has the most precedence.
 
