Ghostery 8: enlist for Android compatibility

--- a/extension-manifest-v2/manifest.json
+++ b/extension-manifest-v2/manifest.json
@@ -293,6 +293,7 @@
 		"persistent": true
 	},
 	"browser_specific_settings": {
+		"gecko_android": {},
 		"gecko": {
 			"id": "firefox@ghostery.com",
 			"strict_min_version": "68.0"
