--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -11,8 +11,10 @@
   "scripts": {
     "postinstall": "vendor-copy && npm run download-trackerdb",
     "start": "web-ext run --target=chromium",
+    "prebuild": "npm run licenses",
     "build.dev": "webpack --mode development --progress",
-    "build.prod": "webpack --mode production --progress",
+    "build": "webpack --mode production --progress",
+    "build.prod": "npm run build",
     "build.watch": "webpack --mode development --progress --watch",
     "licenses": "node ../tools/licenses.js",
     "test": "jest",
