--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -46,6 +46,7 @@
     "@ghostery/trackers-preview": "^1.0.0",
     "@ghostery/ui": "^1.0.0",
     "@sentry/browser": "7.1.1",
+    "@whotracksme/webextension-packages": "^4.0.6",
     "classnames": "^2.3.2",
     "d3": "^5.16.0",
     "foundation-sites": "^6.6.2",
