--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -41,11 +41,12 @@
     "@cliqz/adblocker": "^1.26.12",
     "@cliqz/adblocker-webextension": "^1.26.12",
     "@cliqz/url-parser": "^1.1.5",
-    "@duckduckgo/autoconsent": "^6.2.0",
+    "@duckduckgo/autoconsent": "^8.1.0",
     "@ghostery/libs": "^1.0.0",
     "@ghostery/trackers-preview": "^1.0.0",
     "@ghostery/ui": "^1.0.0",
     "@sentry/browser": "7.1.1",
+    "@whotracksme/webextension-packages": "^4.0.6",
     "classnames": "^2.3.2",
     "d3": "^5.16.0",
     "foundation-sites": "^6.6.2",
