--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "license-checker": "^25.0.1",
+    "license-report": "^6.5.0",
     "patch-package": "^6.5.1",
     "prettier": "^2.6.2"
   },
