--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -45,7 +45,7 @@
     "@ghostery/trackers-preview": "^1.0.0",
     "@ghostery/ui": "^1.0.0",
     "@sentry/browser": "7.1.1",
-    "@whotracksme/webextension-packages": "^5.0.6",
+    "@whotracksme/webextension-packages": "5.0.5",
     "classnames": "^2.3.2",
     "d3": "^7.8.5",
     "foundation-sites": "^6.6.2",
