Ghostery 10: staging setup

--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -4,11 +4,12 @@
   "version": "10.2.15",
   "type": "module",
   "scripts": {
-    "postinstall": "npm run download-engines && npm run download-whotracksme-bloomfilter",
-    "build": "node scripts/build.js",
-    "start": "npm run build -- --watch",
     "download-engines": "node scripts/download-engines/index.js",
     "download-whotracksme-bloomfilter": "node scripts/download-whotracksme-bloomfilter.js",
+    "download": "npm run download-engines && npm run download-whotracksme-bloomfilter",
+    "download.staging": "npm run download-engines -- --staging && npm run download-whotracksme-bloomfilter",
+    "build": "node scripts/build.js",
+    "start": "npm run build -- --watch",
     "licenses": "license-report --config=../.license-report-config.json > dist/licenses.html",
     "lint": "eslint src/",
     "test": "npm run lint",
