--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -59,6 +59,11 @@
         "id": "annoyances",
         "enabled": false,
         "path": "rule_resources/dnr-annoyances.json"
+      },
+      {
+        "id": "fixes",
+        "enabled": true,
+        "path": "rule_resources/dnr-fixes.json"
       }
     ]
   },
