--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -61,6 +61,11 @@
         "path": "rule_resources/dnr-annoyances.json"
       },
       {
+        "id": "trackerdb",
+        "enabled": false,
+        "path": "rule_resources/dnr-trackerdb.json"
+      },
+      {
         "id": "fixes",
         "enabled": true,
         "path": "rule_resources/dnr-fixes.json"
