--- a/extension-manifest-v3/src/manifest.safari-ios.json
+++ b/extension-manifest-v3/src/manifest.safari-ios.json
@@ -49,6 +49,11 @@
         "path": "rule_resources/dnr-safari.json"
       },
       {
+        "id": "trackerdb",
+        "enabled": false,
+        "path": "rule_resources/dnr-trackerdb.json"
+      },
+      {
         "id": "fixes",
         "enabled": true,
         "path": "rule_resources/dnr-fixes.json"
