--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -10,7 +10,7 @@
     "start": "npm run build -- --watch",
     "licenses": "license-report --config=../.license-report-config.json > dist/licenses.html",
     "lint": "eslint src/",
-    "test": "npm run lint",
+    "test": "node --test && npm run lint",
     "locales.ui": "hybrids extract -c --format=chrome.i18n ../node_modules/@ghostery/ui ./src/_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./src ./src/_locales/en/messages.json",
     "locales": "npm run locales.ui && npm run locales.src",
@@ -26,8 +26,10 @@
   "license": "MPL-2.0",
   "devDependencies": {
     "shelljs": "^0.8.5",
+    "sinon-chrome": "^3.0.1",
     "vite": "^4.5.2",
-    "web-ext": "^7.11.0"
+    "web-ext": "^7.11.0",
+    "webextension-polyfill": "^0.11.0"
   },
   "dependencies": {
     "@cliqz/adblocker": "^1.27.1",
