Ghostery 10: Selective blocking (#1512)

--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -6,13 +6,11 @@
   "scripts": {
     "download-engines": "node scripts/download-engines/index.js",
     "download-whotracksme-bloomfilter": "node scripts/download-whotracksme-bloomfilter.js",
-    "download": "npm run download-engines && npm run download-whotracksme-bloomfilter",
-    "download.staging": "npm run download-engines -- --staging && npm run download-whotracksme-bloomfilter",
     "build": "node scripts/build.js",
     "start": "npm run build -- --watch",
     "licenses": "license-report --config=../.license-report-config.json > dist/licenses.html",
     "lint": "eslint src/",
-    "test": "npm run lint",
+    "test": "node --test && npm run lint",
     "locales.ui": "hybrids extract -c --format=chrome.i18n ../node_modules/@ghostery/ui ./src/_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./src ./src/_locales/en/messages.json",
     "locales": "npm run locales.ui && npm run locales.src",
@@ -28,8 +26,10 @@
   "license": "MPL-2.0",
   "devDependencies": {
     "shelljs": "^0.8.5",
+    "sinon-chrome": "^3.0.1",
     "vite": "^4.5.2",
-    "web-ext": "^7.11.0"
+    "web-ext": "^7.11.0",
+    "webextension-polyfill": "^0.11.0"
   },
   "dependencies": {
     "@cliqz/adblocker": "^1.27.1",
@@ -40,7 +40,7 @@
     "@ghostery/ui": "^1.0.0",
     "@github/relative-time-element": "^4.3.0",
     "@whotracksme/webextension-packages": "^5.0.11",
-    "hybrids": "^8.2.14",
+    "hybrids": "^8.2.22",
     "idb": "^7.1.1",
     "jwt-decode": "^4.0.0",
     "tldts-experimental": "^6.0.19"
