--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -37,8 +37,9 @@
   },
   "homepage": "https://github.com/ghostery/ghostery-extension#readme",
   "dependencies": {
-    "@cliqz/adblocker": "^1.27.1",
-    "@cliqz/adblocker-webextension": "^1.27.1",
+    "@cliqz/adblocker": "^1.27.3",
+    "@cliqz/adblocker-content": "^1.27.3",
+    "@cliqz/adblocker-webextension": "^1.27.3",
     "@cliqz/url-parser": "^1.1.5",
     "@duckduckgo/autoconsent": "^10.6.3",
     "@ghostery/libs": "^1.0.0",
