--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -32,8 +32,9 @@
     "webextension-polyfill": "^0.11.0"
   },
   "dependencies": {
-    "@cliqz/adblocker": "^1.27.1",
-    "@cliqz/adblocker-webextension-cosmetics": "^1.27.1",
+    "@cliqz/adblocker": "^1.27.3",
+    "@cliqz/adblocker-content": "^1.27.3",
+    "@cliqz/adblocker-webextension-cosmetics": "^1.27.3",
     "@duckduckgo/autoconsent": "^10.6.3",
     "@ghostery/libs": "^1.0.0",
     "@ghostery/trackers-preview": "^1.0.0",
