Refactor domain stats to hostname

--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -67,7 +67,7 @@
       },
       {
         "id": "fixes",
-        "enabled": true,
+        "enabled": false,
         "path": "rule_resources/dnr-fixes.json"
       }
     ]
