Minor fixes to release script:
* Branch name to `release`
* Fixes locales command
* Adds build number to commit message

--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -11,9 +11,10 @@
     "licenses": "license-report --config=../.license-report-config.json > dist/licenses.html",
     "lint": "eslint src/",
     "test": "node --test && npm run lint",
+    "locales:setup": "cp -f ./src/messages.json ./src/_locales/en/messages.json",
     "locales.ui": "hybrids extract -c --format=chrome.i18n ../node_modules/@ghostery/ui ./src/_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./src ./src/_locales/en/messages.json",
-    "locales": "npm run locales.ui && npm run locales.src",
+    "locales": "npm run locales:setup && npm run locales.ui && npm run locales.src",
     "xcode-export-locales": "rm -rf ./xcode/en.xcloc && xcodebuild -exportLocalizations -project ./xcode/Ghostery.xcodeproj -localizationPath ./xcode",
     "release": "./scripts/release.sh",
     "package": "./scripts/package.sh"
