--- a/.github/workflows/release-v3.yml
+++ b/.github/workflows/release-v3.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: extension-manifest-v3/web-ext-artifacts/ghostery-firefox.zip
-          asset_name: ghostery-firefox.zip
+          asset_name: ghostery-firefox-${{ env.VERSION }}.zip
           asset_content_type: application/gzip
 
       - name: Upload Chrome build
@@ -54,7 +54,7 @@ jobs:
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: extension-manifest-v3/web-ext-artifacts/ghostery-chrome.zip
-          asset_name: ghostery-chrome.zip
+          asset_name: ghostery-chrome-${{ env.VERSION }}.zip
           asset_content_type: application/gzip
 
       - name: Upload Opera build
@@ -64,7 +64,7 @@ jobs:
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: extension-manifest-v3/web-ext-artifacts/ghostery-opera.zip
-          asset_name: ghostery-opera.zip
+          asset_name: ghostery-opera-${{ env.VERSION }}.zip
           asset_content_type: application/gzip
 
       - name: Upload Edge build
@@ -74,5 +74,5 @@ jobs:
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: extension-manifest-v3/web-ext-artifacts/ghostery-edge.zip
-          asset_name: ghostery-edge.zip
+          asset_name: ghostery-edge-${{ env.VERSION }}.zip
           asset_content_type: application/gzip
