--- a/.github/workflows/artifact-upload.yml
+++ b/.github/workflows/artifact-upload.yml
@@ -24,8 +24,9 @@ jobs:
           VERSION=$(node -p "require('./package.json').version")
           echo "VERSION=$VERSION" >> "$GITHUB_ENV"
 
-          echo $VERSION
-          echo $SHA
+          echo version: $VERSION
+          echo github: $GITHUB_SHA
+          echo sha: $SHA
       - uses: actions/setup-node@v3
         with:
           node-version-file: '.tool-versions'
