--- a/.github/workflows/artifact-upload.yml
+++ b/.github/workflows/artifact-upload.yml
@@ -25,7 +25,7 @@ jobs:
           VERSION=$(node -p "require('./package.json').version")
           echo "VERSION=$VERSION" >> "$GITHUB_ENV"
 
-          git log --pretty=oneline -n 5
+          git log -n 5
 
           echo version: $VERSION
           echo github: $GITHUB_SHA
