--- a/.github/workflows/artifact-upload.yml
+++ b/.github/workflows/artifact-upload.yml
@@ -17,19 +17,6 @@ jobs:
         working-directory: extension-manifest-v3
     steps:
       - uses: actions/checkout@v2
-      - name: Set version and SHA
-        run: |
-          SHA=$(git rev-parse --short HEAD)
-          echo "SHA=$SHA" >> "$GITHUB_ENV"
-
-          VERSION=$(node -p "require('./package.json').version")
-          echo "VERSION=$VERSION" >> "$GITHUB_ENV"
-
-          git log -n 5
-
-          echo version: $VERSION
-          echo github: $GITHUB_SHA
-          echo sha: $SHA
       - uses: actions/setup-node@v3
         with:
           node-version-file: '.tool-versions'
@@ -38,6 +25,10 @@ jobs:
       - name: Install dependencies in repo root
         run: npm ci
         working-directory: .
+      - name: Set version
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "VERSION=$VERSION" >> "$GITHUB_ENV"
       - name: Build packages
         run: npm run package -- --simple
       - name: Uncompress packages
@@ -55,18 +46,18 @@ jobs:
       - name: Upload Firefox build
         uses: actions/upload-artifact@v3
         with:
-          name: ghostery-firefox-${{ env.VERSION }}-${{ env.SHA }}
+          name: ghostery-firefox-${{ env.VERSION }}-${{ github.event.pull_request.head.sha }}
           path: extension-manifest-v3/web-ext-artifacts/ghostery-firefox/*
           if-no-files-found: error
       - name: Upload Edge build
         uses: actions/upload-artifact@v3
         with:
-          name: ghostery-edge-${{ env.VERSION }}-${{ env.SHA }}
+          name: ghostery-edge-${{ env.VERSION }}-${{ github.event.pull_request.head.sha }}
           path: extension-manifest-v3/web-ext-artifacts/ghostery-edge/*
           if-no-files-found: error
       - name: Upload Opera build
         uses: actions/upload-artifact@v3
         with:
-          name: ghostery-opera-${{ env.VERSION }}-${{ env.SHA }}
+          name: ghostery-opera-${{ env.VERSION }}-${{ github.event.pull_request.head.sha }}
           path: extension-manifest-v3/web-ext-artifacts/ghostery-opera/*
           if-no-files-found: error
