--- a/.github/workflows/artifact-upload.yml
+++ b/.github/workflows/artifact-upload.yml
@@ -17,12 +17,16 @@ jobs:
         working-directory: extension-manifest-v3
     steps:
       - uses: actions/checkout@v2
-      - run: |
-          SHA=$(git rev-parse --short "$GITHUB_SHA")
-          echo "SHA=$SHA" >> "$GITHUB_ENV"
-
+      - name: Set version and SHA
+        run: |
           VERSION=$(node -p "require('./package.json').version")
           echo "VERSION=$VERSION" >> "$GITHUB_ENV"
+
+          SHA=$(git rev-parse --short ${{ github.event.pull_request.head.sha }})
+          echo "SHA=$SHA" >> "$GITHUB_ENV"
+
+          echo $VERSION
+          echo $SHA
       - uses: actions/setup-node@v3
         with:
           node-version-file: '.tool-versions'
