--- a/extension-manifest-v3/xcode/Ghostery.xcodeproj/xcshareddata/xcschemes/Ghostery – Privacy Ad Blocker (macOS).xcscheme
+++ b/extension-manifest-v3/xcode/Ghostery.xcodeproj/xcshareddata/xcschemes/Ghostery – Privacy Ad Blocker (macOS).xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "468E429C2701F84A008B5792"
-               BuildableName = "Ghostery &#x2013; Privacy Ad Blocker.app"
-               BlueprintName = "Ghostery &#x2013; Privacy Ad Blocker (macOS)"
+               BuildableName = "Ghostery Privacy Ad Blocker.app"
+               BlueprintName = "macOS"
                ReferencedContainer = "container:Ghostery.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -45,8 +45,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "468E429C2701F84A008B5792"
-            BuildableName = "Ghostery &#x2013; Privacy Ad Blocker.app"
-            BlueprintName = "Ghostery &#x2013; Privacy Ad Blocker (macOS)"
+            BuildableName = "Ghostery Privacy Ad Blocker.app"
+            BlueprintName = "macOS"
             ReferencedContainer = "container:Ghostery.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -65,8 +65,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "468E429C2701F84A008B5792"
-            BuildableName = "Ghostery &#x2013; Privacy Ad Blocker.app"
-            BlueprintName = "Ghostery &#x2013; Privacy Ad Blocker (macOS)"
+            BuildableName = "Ghostery Privacy Ad Blocker.app"
+            BlueprintName = "macOS"
             ReferencedContainer = "container:Ghostery.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
