--- a/extension-manifest-v3/src/manifest.safari-ios.json
+++ b/extension-manifest-v3/src/manifest.safari-ios.json
@@ -81,7 +81,8 @@
       "run_at": "document_start",
       "js": [
         "content_scripts/adblocker-scriptlets.js"
-      ]
+      ],
+      "all_frames": true
     },
     {
       "matches": ["http://*/*", "https://*/*"],
