feat: extract resources on engine downloads

--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -125,6 +125,11 @@
       "matches": [
         "<all_urls>"
       ]
+    },
+    {
+      "resources": [
+        "rule_resources/statics/*"
+      ]
     }
   ],
   "content_security_policy": {}
