--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -68,7 +68,7 @@
     "tldts-experimental": "^6.0.19",
     "underscore": "^1.13.6",
     "url": "^0.11.0",
-    "webextension-polyfill": "^0.12.0"
+    "webextension-polyfill": "0.12.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
@@ -104,7 +104,7 @@
     "underscore-template-loader": "^1.2.0",
     "url-loader": "^4.1.1",
     "vendor-copy": "^3.0.1",
-    "web-ext": "^7.11.0",
+    "web-ext": "^8.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-shell-plugin-next": "^2.3.1"
