--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -28,8 +28,8 @@
   "devDependencies": {
     "shelljs": "^0.8.5",
     "sinon-chrome": "^3.0.1",
-    "vite": "^4.5.2",
-    "web-ext": "^7.11.0",
+    "vite": "4.5.2",
+    "web-ext": "^8.2.0",
     "webextension-polyfill": "^0.12.0"
   },
   "dependencies": {
