chore: match resources path and properly filter resource names

--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -128,7 +128,7 @@
     },
     {
       "resources": [
-        "rule_resources/statics/*"
+        "rule_resources/redirects/*"
       ]
     }
   ],
