--- a/extension-manifest-v3/src/manifest.firefox.json
+++ b/extension-manifest-v3/src/manifest.firefox.json
@@ -90,7 +90,8 @@
   ],
   "browser_specific_settings": {
 		"gecko": {
-			"id": "firefox@ghostery.com"
+			"id": "firefox@ghostery.com",
+      "strict_min_version": "102.0"
 		}
 	}
 }
