--- a/extension-manifest-v3/src/manifest.firefox.json
+++ b/extension-manifest-v3/src/manifest.firefox.json
@@ -47,38 +47,30 @@
     {
       "matches": ["http://*/*", "https://*/*"],
       "run_at": "document_start",
-      "js": [
-        "content_scripts/adblocker.js"
-      ],
+      "js": ["content_scripts/adblocker.js"],
       "all_frames": true
     },
     {
       "matches": ["http://*/*", "https://*/*"],
       "run_at": "document_start",
-      "js": [
-        "content_scripts/autoconsent.js"
-      ],
+      "js": ["content_scripts/autoconsent.js"],
       "all_frames": true
     },
     {
       "matches": ["http://*/*", "https://*/*"],
       "run_at": "document_start",
-      "js": [
-        "content_scripts/iframe.js"
-      ]
+      "js": ["content_scripts/iframe.js"]
     },
     {
       "matches": ["http://*/*", "https://*/*"],
       "run_at": "document_start",
-      "js": [
-        "content_scripts/whotracksme/reporting.js"
-      ]
+      "js": ["content_scripts/whotracksme/reporting.js"]
     },
     {
       "matches": ["*://www.youtube.com/*"],
       "run_at": "document_start",
-			"js": ["content_scripts/youtube.js"]
-		}
+      "js": ["content_scripts/youtube.js"]
+    }
   ],
   "web_accessible_resources": [
     "content_scripts/trackers-preview.js",
@@ -89,9 +81,10 @@
     "pages/youtube/index.html"
   ],
   "browser_specific_settings": {
-		"gecko": {
-			"id": "firefox@ghostery.com",
+    "gecko_android": {},
+    "gecko": {
+      "id": "firefox@ghostery.com",
       "strict_min_version": "102.0"
-		}
-	}
+    }
+  }
 }
