--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -2,7 +2,6 @@
   "name": "@ghostery/extension-manifest-v3",
   "private": true,
   "version": "10.4.2",
-  "type": "module",
   "scripts": {
     "download-engines": "node scripts/download-engines/index.js",
     "download-whotracksme-bloomfilter": "node scripts/download-whotracksme-bloomfilter.js",
@@ -26,6 +25,8 @@
   },
   "license": "MPL-2.0",
   "devDependencies": {
+    "@playwright/test": "^1.46.1",
+    "@types/node": "^22.5.0",
     "shelljs": "^0.8.5",
     "sinon-chrome": "^3.0.1",
     "vite": "4.5.2",
@@ -42,6 +43,7 @@
     "@ghostery/ui": "^1.0.0",
     "@github/relative-time-element": "^4.3.0",
     "@whotracksme/reporting": "^5.1.20",
+    "decompress": "^4.2.1",
     "hybrids": "^9.1.1",
     "idb": "^7.1.1",
     "jwt-decode": "^4.0.0",
