--- a/extension-manifest-v3/src/manifest.firefox.json
+++ b/extension-manifest-v3/src/manifest.firefox.json
@@ -14,6 +14,7 @@
     "webNavigation",
     "webRequest",
     "webRequestBlocking",
+    "unlimitedStorage",
     "http://*/*",
     "https://*/*",
     "ws://*/*",
