--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "glossary-converter": "node tools/glossary-converter.js",
-    "postinstall": "patch-package && npm run postinstall --workspaces --if-present"
+    "postinstall": "npm run postinstall --workspaces --if-present"
   },
   "devDependencies": {
     "csv": "^6.2.5",
@@ -13,7 +13,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "license-report": "^6.5.0",
-    "patch-package": "^6.5.1",
     "prettier": "^2.6.2"
   },
   "workspaces": [
