fix: merge chromium-based browsers to one build

--- a/.github/workflows/artifact-upload.yml
+++ b/.github/workflows/artifact-upload.yml
@@ -39,31 +39,19 @@ jobs:
         run: npm run package -- --simple
       - name: Uncompress packages
         run: |
-          for PLATFORM in firefox chrome edge opera; do
+          for PLATFORM in firefox chromium; do
             mkdir web-ext-artifacts/ghostery-$PLATFORM
             unzip "web-ext-artifacts/ghostery-$PLATFORM.zip" -d "web-ext-artifacts/ghostery-$PLATFORM"
           done
-      - name: Upload Chrome build
+      - name: Upload Chromium build
         uses: actions/upload-artifact@v3
         with:
-          name: ghostery-chrome-${{ env.VERSION }}-${{ env.SHA }}
-          path: extension-manifest-v3/web-ext-artifacts/ghostery-chrome/*
+          name: ghostery-chromium-${{ env.VERSION }}-${{ env.SHA }}
+          path: extension-manifest-v3/web-ext-artifacts/ghostery-chromium/*
           if-no-files-found: error
       - name: Upload Firefox build
         uses: actions/upload-artifact@v3
         with:
           name: ghostery-firefox-${{ env.VERSION }}-${{ env.SHA }}
           path: extension-manifest-v3/web-ext-artifacts/ghostery-firefox/*
-          if-no-files-found: error
-      - name: Upload Edge build
-        uses: actions/upload-artifact@v3
-        with:
-          name: ghostery-edge-${{ env.VERSION }}-${{ env.SHA }}
-          path: extension-manifest-v3/web-ext-artifacts/ghostery-edge/*
-          if-no-files-found: error
-      - name: Upload Opera build
-        uses: actions/upload-artifact@v3
-        with:
-          name: ghostery-opera-${{ env.VERSION }}-${{ env.SHA }}
-          path: extension-manifest-v3/web-ext-artifacts/ghostery-opera/*
           if-no-files-found: error
