--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -8,6 +8,7 @@
     "download-whotracksme-bloomfilter": "node scripts/download-whotracksme-bloomfilter.js",
     "build": "node scripts/build.js",
     "start": "npm run build -- --watch",
+    "start:update": "./scripts/update.sh",
     "licenses": "license-report --config=../.license-report-config.json > dist/licenses.html",
     "lint": "eslint src/",
     "test": "node --test && npm run lint",
