--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -10,6 +10,7 @@
     "build": "node scripts/build.js",
     "start": "npm run build -- --watch",
     "start:update": "./scripts/update.sh",
+    "debug": "npm run build -- --watch --debug",
     "licenses": "license-report --config=../.license-report-config.json > dist/licenses.html",
     "lint": "eslint src/",
     "test": "node --test && npm run lint",
