--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "version": "10.4.7",
   "type": "module",
   "scripts": {
-    "postinstall": "patch-package",
-    "glossary-converter": "node tools/glossary-converter.js",
     "download-engines": "node scripts/download-engines.js",
     "download-wtm-bloomfilter": "node scripts/download-wtm-bloomfilter.js",
     "download-wtm-stats": "node scripts/download-wtm-stats.js",
@@ -21,7 +19,8 @@
     "locales": "npm run locales:setup && npm run locales.src",
     "xcode-export-locales": "rm -rf ./xcode/en.xcloc && xcodebuild -exportLocalizations -project ./xcode/Ghostery.xcodeproj -localizationPath ./xcode",
     "release": "./scripts/release.sh",
-    "package": "./scripts/package.sh"
+    "package": "./scripts/package.sh",
+    "glossary-converter": "node tools/glossary-converter.js"
   },
   "devDependencies": {
     "csv": "^6.2.5",
@@ -29,11 +28,10 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "license-report": "^6.5.0",
-    "patch-package": "^6.5.1",
     "prettier": "^2.6.2",
     "shelljs": "^0.8.5",
     "sinon-chrome": "^3.0.1",
-    "vite": "4.5.2",
+    "vite": "^5.4.8",
     "web-ext": "^8.2.0",
     "webextension-polyfill": "^0.12.0"
   },
