--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "glossary-converter": "node tools/glossary-converter.js"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.11.1",
     "csv": "^6.2.5",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.9.0",
     "license-report": "^6.5.0",
-    "prettier": "^2.6.2",
+    "prettier": "^3.3.3",
     "shelljs": "^0.8.5",
     "sinon-chrome": "^3.0.1",
     "vite": "^5.4.8",
