--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "locales": "npm run locales:setup && npm run locales.src",
     "xcode-export-locales": "rm -rf ./xcode/en.xcloc && xcodebuild -exportLocalizations -project ./xcode/Ghostery.xcodeproj -localizationPath ./xcode",
     "release": "./scripts/release.sh",
-    "package": "./scripts/package.sh",
-    "glossary-converter": "node tools/glossary-converter.js"
+    "package": "./scripts/package.sh"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
