fix: remove unused eslint eslintrc support

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Source
+      - name: Lint
+        run: npm run lint
+
+      - name: Test
         run: npm test
 
       - name: Build
