--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "start:update": "./scripts/update.sh",
     "debug": "npm run build -- --watch --debug",
     "licenses": "license-report --config=../.license-report-config.json > dist/licenses.html",
-    "lint": "eslint src/",
-    "test": "node --test && npm run lint",
+    "lint": "eslint",
+    "test": "npm run build && npm run wdio",
+    "wdio": "wdio tests/e2e/wdio.conf.js",
+    "wdio:debug": "DEBUG=true wdio tests/e2e/wdio.conf.js",
     "locales:setup": "cp -f ./src/messages.json ./src/_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./src ./src/_locales/en/messages.json",
     "locales": "npm run locales:setup && npm run locales.src",
@@ -23,6 +25,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@wdio/browser-runner": "^9.1.2",
+    "@wdio/cli": "^9.1.2",
+    "@wdio/globals": "^9.1.2",
+    "@wdio/mocha-framework": "^9.1.2",
+    "@wdio/spec-reporter": "^9.1.2",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.9.0",
