chore(editor): Add `chrome` namespace with types for IntelliSense

--- a/src/jsconfig.json
+++ b/src/jsconfig.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
     "paths": {
       "/*": ["./*"]
     }
-  }
+  },
+  "include": [
+    "./**/*.js",
+    "./globals.d.ts"
+  ]
 }
