--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/chrome": "^0.0.277",
     "@wdio/browser-runner": "^9.1.3",
     "@wdio/cli": "^9.1.3",
     "@wdio/globals": "^9.1.2",
