--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@wdio/mocha-framework": "^9.1.2",
     "@wdio/spec-reporter": "^9.1.3",
     "eslint": "^9.12.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.11.0",
     "license-report": "^6.5.0",
     "prettier": "^3.3.3",
