--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint",
     "test": "npm run wdio",
     "wdio": "wdio tests/wdio.conf.js",
-    "wdio:debug": "DEBUG=true npm run wdio",
+    "wdio:debug": "wdio tests/wdio.conf.js --debug",
     "locales:setup": "cp -f ./src/messages.json ./src/_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./src ./src/_locales/en/messages.json",
     "locales": "npm run locales:setup && npm run locales.src",
