--- a/src/manifest.safari-macos.json
+++ b/src/manifest.safari-macos.json
@@ -46,12 +46,17 @@
       {
         "id": "ads",
         "enabled": false,
-        "path": "rule_resources/dnr-safari.json"
+        "path": "rule_resources/dnr-ads.json"
+      },
+      {
+        "id": "annoyances",
+        "enabled": false,
+        "path": "rule_resources/dnr-annoyances.json"
       },
       {
         "id": "fixes",
         "enabled": false,
-        "path": "rule_resources/dnr-fixes-safari.json"
+        "path": "rule_resources/dnr-fixes.json"
       }
     ]
   },
